--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -6,7 +6,11 @@ layout: default
     {% if page.title %}
     <h1 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
     {% endif %}
-    <div class="entry-content">{{ content }}</div>
+    {% if page.title == "About Me" %}
+    <div itemscope itemtype="http://schema.org/Person">
+      <div class="entry-content">{{ content }}</div>
+    </div>
+    {% endif %}
 </article>
 {% unless page.sharing == false %}
 	{% include post/sharing.html %}
