--- a/source/_includes/post/author.html
+++ b/source/_includes/post/author.html
@@ -5,4 +5,5 @@
 {% else %}
   {% assign author = site.author %}
 {% endif %}
-{% if author %}<span class="byline author vcard">Posted by <span class="fn">{{ author }}</span></span>{% endif %}
+<div itemscope itemtype="http://schema.org/Person">
+{% if author %}<span class="byline author vcard">Posted by <span class="fn"><span itemprop="name">{{ author }}</span></span></span>{% endif %}</div>
